# rye-with-docker

./: Dockerfile  README.md  pyproject.toml
src/: main.py
