[project]
name = "rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sogo Kato", email = "sogo.kato@outlook.com" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
